# tenex-take-home-assignment-api

./: .env.example  .gitignore  README.md  app.py  config.py  exceptions.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
clients/: embeddings_client.py  llm_client.py  vector_db_client.py
middleware/: __init__.py  rate_limit.py
routes/: __init__.py  chat.py  drive.py
services/: __init__.py  chat_service.py  drive_service.py
services/text-embeddings-api/: Dockerfile
services/vector-db/: Dockerfile
tests/: conftest.py  test_routes.py  test_schemas.py  test_services.py  test_utils.py
