[project]
name = "tenex-take-home-assignment-api"
version = "0.1.0"
description = "API for loading Google Drive documents and RAG chat"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
exclude = [".git", "__pycache__", "venv", ".venv", "services/text-embeddings-api", "services/vector-db"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "exceptions", "schemas", "clients", "routes", "services", "middleware", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
